// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi blocks a multiblock can be removed and leaves no extra text nodes 1`] = `
"function anonymous(BaseBlock, template, updateClass, handler
) {
  return class BElem extends BaseBlock {
    mountBefore(anchor) {
      this.el = template.cloneNode(true);
      anchor.before(this.el);
    }
    patch(block) {
    }
  };
}"
`;

exports[`multi blocks a multiblock can be removed and leaves no extra text nodes 2`] = `
"function anonymous(BaseBlock, template, updateClass, handler
) {
  return class BElem extends BaseBlock {
    mountBefore(anchor) {
      this.el = template.cloneNode(true);
      anchor.before(this.el);
    }
    patch(block) {
    }
  };
}"
`;

exports[`multi blocks multi block in a regular block 1`] = `
"function anonymous(BaseBlock, template, updateClass, handler
) {
  return class BElem extends BaseBlock {
    mountBefore(anchor) {
      this.el = template.cloneNode(true);
      let ref0 = this.el.firstChild;
      const children = this.children;
      let child0 = children[0]; if (child0) { child0.mountBefore(ref0); }
      this.refs = [ref0];
      anchor.before(this.el);
    }
    patch(block) {
      if (this === block) return;
      const refs = this.refs;
      const children = this.children;
      const nextChildren = block.children;
      let child0 = children[0], nextChild0 = nextChildren[0];
      if (child0) { if (nextChild0) { child0.patch(nextChild0); } else { child0.remove(); children[0] = null; } }
      else if (nextChild0) { nextChild0.mountBefore(refs[0]); children[0] = nextChild0; }
    }
  };
}"
`;

exports[`multi blocks multi block in a regular block 2`] = `
"function anonymous(BaseBlock, template, updateClass, handler
) {
  return class BElem extends BaseBlock {
    mountBefore(anchor) {
      this.el = template.cloneNode(true);
      anchor.before(this.el);
    }
    patch(block) {
    }
  };
}"
`;

exports[`multi blocks multiblock with an empty children 1`] = `
"function anonymous(BaseBlock, template, updateClass, handler
) {
  return class BElem extends BaseBlock {
    mountBefore(anchor) {
      this.el = template.cloneNode(true);
      anchor.before(this.el);
    }
    patch(block) {
    }
  };
}"
`;
